+ added sunlit effect to walls (might be removed later)  + began implementing network code (currently nonfunctional)  + added blood fountain entity behavior (testing sprite particle speed)  + added new map: station.bsm  + added dead.ogg  * modified entity movement code slightly  * modified player code to use more entity variables (prep for multiplayer)  * changed license to 2-clause BSD license  * cleaned up code, fixed minor bugs  * shotgun now fires one barrel at a time  * added some randomness to weapon shooting code  * fixed music crash bug  - removed superfluous include statements  - removed dead.mid

--- a/default.cfg
+++ b/default.cfg
@@ -1,5 +1,5 @@
 # default.cfg
-# bindings take device scancode
+# bindings take device scancode (in decimal, but this is still a useful reference: http://www.ee.bgu.ac.il/~microlab/MicroLab/Labs/ScanCodes.htm)
 # mouse scancodes are -1:left, -2:middle, -3:right, -4:wheel up, -5:wheel down
 
 bind 17 IN_FORWARD
