--- a/makefile.linux
+++ b/makefile.linux
@@ -1,7 +1,7 @@
 #################################################################################
 #	
 #	BUBBENSTEIN/SDL
-#	File: mingw32 makefile
+#	File: linux makefile
 #	Desc: The BSDL engine makefile, linux version
 #	
 #	Copyright 2013 (c) Sheridan Rathbun, all rights reserved.
@@ -18,31 +18,31 @@ LIB2=-L/usr/local/lib
 all: bsdl clean
 	
 bsdl: bsdl.o e_*.o i_*.o r_*.o a_*.o g_*.o
-	$(CC) $(CFLAGS) bsdl.o e_list.o e_collision.o e_behaviors.o i_draw.o i_funcs.o r_data.o r_draw.o r_render.o a_sound.o g_data.o g_main.o -o bsdl.exe $(LIB1) -lsprig $(LIB2) -lSDLmain -lSDL -lSDL_mixer -lpthread
+	$(CC) $(CFLAGS) $(INCLUDE) bsdl.o e_list.o e_collision.o e_behaviors.o i_draw.o i_funcs.o r_data.o r_draw.o r_render.o a_sound.o g_data.o g_main.o -o bsdl.exe $(LIB1) -lsprig $(LIB2) -lSDLmain -lSDL -lSDL_mixer -lpthread
 	
 bsdl.o:
-	$(CC) $(CFLAGS) -c src/bsdl.c -o bsdl.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/bsdl.c -o bsdl.o
 	
 e_*.o:
-	$(CC) $(CFLAGS) -c src/e_list.c -o e_list.o
-	$(CC) $(CFLAGS) -c src/e_collision.c -o e_collision.o
-	$(CC) $(CFLAGS) -c src/e_behaviors.c -o e_behaviors.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/e_list.c -o e_list.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/e_collision.c -o e_collision.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/e_behaviors.c -o e_behaviors.o
 	
 i_*.o:
-	$(CC) $(CFLAGS) -c src/i_draw.c -o i_draw.o
-	$(CC) $(CFLAGS) -c src/i_funcs.c -o i_funcs.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/i_draw.c -o i_draw.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/i_funcs.c -o i_funcs.o
 	
 r_*.o:
-	$(CC) $(CFLAGS) -c src/r_data.c -o r_data.o
-	$(CC) $(CFLAGS) -c src/r_draw.c -o r_draw.o
-	$(CC) $(CFLAGS) -c src/r_render.c -o r_render.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/r_data.c -o r_data.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/r_draw.c -o r_draw.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/r_render.c -o r_render.o
 	
 a_*.o:
-	$(CC) $(CFLAGS) -c src/a_sound.c -o a_sound.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/a_sound.c -o a_sound.o
 	
 g_*.o:
-	$(CC) $(CFLAGS) -c src/g_data.c -o g_data.o
-	$(CC) $(CFLAGS) -c src/g_main.c -o g_main.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/g_data.c -o g_data.o
+	$(CC) $(CFLAGS) $(INCLUDE) -c src/g_main.c -o g_main.o
 	
 clean:
 	rm *.o
